--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -18,17 +18,15 @@
     If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
   </p>
 
-
   <ion-list>
-        <ion-item *ngFor="let item of results">
+        <ion-item *ngFor="let item of (results | async)">
           <ion-thumbnail item-start>
-            <img src={{item.image}}>
+            <img [src]="'https://image.tmdb.org/t/p/w500'+item.poster_path">
           </ion-thumbnail>
           <h2>{{item.title}}</h2>
-          <p>{{item.author}}</p>
+          <p>{{item.release_date}}</p>
           <button ion-button clear item-end [navPush]="pushPage" [navParams]="item">Details</button>
         </ion-item>
-
-  </ion-list>
+</ion-list>
 
 </ion-content>
