--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -24,7 +24,7 @@
             <img [src]="'https://image.tmdb.org/t/p/w500'+item.poster_path">
           </ion-thumbnail>
           <h2>{{item.title}}</h2>
-          <p>{{item.release_date}}</p>
+          <p>{{item.release_date | date}}</p>
           <button ion-button clear item-end [navPush]="pushPage" [navParams]="item">Details</button>
         </ion-item>
 </ion-list>
