--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -15,7 +15,7 @@
 <ion-content padding>
   <ion-list>
         <ion-item *ngFor="let item of (results | async)">
-          <ion-thumbnail item-start>
+          <ion-thumbnail *ngIf = "item.poster_path" item-start>
             <img [src]="'https://image.tmdb.org/t/p/w500'+item.poster_path">
           </ion-thumbnail>
           <h2>{{item.title}}</h2>
